--- a/www/index.html
+++ b/www/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello wasm-pack!</title>
+    <title>FFXIV Crafter Solver</title>
   </head>
   <body>
-    <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
+    <div id="root"/>
     <script src="./bootstrap.js"></script>
   </body>
 </html>
