--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>FFXIV Crafter Solver</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div id="root"/>
